# nsf

./: .gitignore  .gitlab-ci.yml  .travis.yml  COMPILE  COMPILE.win  ChangeLog  ChangeLog-2.0b3-2.0b5  ChangeLog-2.0b5-2.0  ChangeLog-2.0b5-2.0.0  ChangeLog-2.4.0-HEAD  Makefile  Makefile.in  README  README.aol  README.md  README.profile  README.release  TODO  aclocal.m4  appveyor.yml  asm.tcl  autogen.sh  configure  configure.ac  configure.in  deploy_key.appveyor.enc  deploy_key.enc  nsf.nxd  nsfConfig.sh.in  nx-mode.el  nxsh.in  nxwish.in  tcl.m4  techstack.md  techstack.yml  xotcl.m4  xotclConfig.sh
.github/workflows/: build.yml
apps/: COPYRIGHT  build.tcl
apps/actiweb/: AgentClient.xotcl  Counter.xotcl  Counter2.xotcl  Counter3.xotcl  Counter4.xotcl  FormsWithState.xotcl  MC.xotcl  Receiver.xotcl  securePlaceDemo.xotcl
apps/comm/: ftp.xotcl  get-regression-nb.xotcl  get-regression.xotcl  link-checker.xotcl  secure-webclient.xotcl  secure-webserver.xotcl  webclient.xotcl  webserver.xotcl
apps/persistence/: persistenceTest.xotcl
apps/scripts/: observer.xotcl  parameter.xotcl  pinger.xotcl  simpleFilters.xotcl  soccerClub.xotcl  soccerClub2.tcl  soccerClub2.xotcl  stack.tcl
apps/utils/: asciidoc.conf  getstubs.tcl  nxdoc  source-doc-beautifier.tcl  source-highlight-with-pp  xo-daemon  xo-whichPkg  xotclsh  xotclsh.in  xowish  xowish.in
apps/xml/: rdfExample.xotcl
config/: mktar.sh
doc/: Announce-1.6.0  Announce-1.6.2  Announce-1.6.3  Announce-1.6.7  Announce-1.6.8  Announce2.0  Announce2.0.0  Announce2.0b3  Announce2.0b5  Announce2.1.0  Announce2.2.0  Announce2.3.0  Announce2.4.0  Announce2.4.1  Announce2.5.0  Class.3  Class.man  JufGdbmStorage-xotcl.html  MemStorage-xotcl.html  MultiStorage-xotcl.html  Object.3  Object.man  Persistence-xotcl.html  Script-xotcl.html  Serializer-xotcl.html  Storage-xotcl.html  TclGdbmStorage-xotcl.html  TextFileStorage-xotcl.html  UNIVERSAL-xotcl.html  adapter-xotcl.html  adapterExample-xotcl.html  alias.man.inc  changeXOTclVersion-xotcl.html  composite-xotcl.html  compositeExample-xotcl.html  configure.3  configure.man  current.3  current.man  delete.man.inc  (+71 more)
doc/example-scripts/: bagel.html  bagel.tcl  container.html  container.tcl  per-object-mixins.html  per-object-mixins.tcl  rosetta-abstract-type.html  rosetta-abstract-type.tcl  rosetta-add-variable.html  rosetta-add-variable.tcl  rosetta-classes.html  rosetta-classes.tcl  rosetta-clone.html  rosetta-clone.tcl  rosetta-constraint-genericity.html  rosetta-constraint-genericity.tcl  rosetta-delegates.html  rosetta-delegates.tcl  rosetta-distinct-objects.html  rosetta-distinct-objects.tcl  rosetta-multiple-distinct.html  rosetta-multiple-distinct.tcl  rosetta-multiple-inheritance.html  rosetta-multiple-inheritance.tcl  rosetta-polymorphic-copy.html  rosetta-polymorphic-copy.tcl  rosetta-polymorphism.html  rosetta-polymorphism.tcl  rosetta-serialization.html  rosetta-serialization.tcl  rosetta-single-inheritance.html  rosetta-single-inheritance.tcl  rosetta-singleton.html  rosetta-singleton.tcl  rosetta-sudoku.html  rosetta-sudoku.tcl  rosetta-tokenizer.html  rosetta-tokenizer.tcl  rosetta-tree.html  rosetta-tree.tcl  (+23 more)
doc/next-tutorial/: configure-parameter.graffle  next-tutorial.html  next-tutorial.txt  object-class-appclass.graffle  object-stack.graffle  per-class-mixin.graffle  per-object-mixin.graffle  person-student.graffle  slots.graffle  stack2.graffle  value-checkers.graffle
dtrace/: README  execution-flow-args.d  execution-flow.d  nsf_calltime.d  object-create.d  sample.tcl  timestamps-q.d  timestamps.d
generic/: aol-xotcl.tcl  aolstub.c  asmExecuteTemplateLabelThreading.c  genAssemble.tcl  gentclAPI.decls  gentclAPI.tcl  mk_predefined.tcl  mk_predefined.xotcl  nsf.c  nsf.decls  nsf.h  nsf.nxd  nsf.tcl  nsfAPI.decls  nsfAPI.h  nsfAPI.nxdocindex  nsfAccessInt.h  nsfAssemble.c  nsfCmdDefinitions.c  nsfCmdPtr.c  nsfCompile.c  nsfDTrace.d  nsfDTrace.h  nsfDebug.c  nsfDecls.h  nsfEnumerationType.c  nsfError.c  nsfFunPtrHashTable.c  nsfInt.decls  nsfInt.h  nsfIntDecls.h  nsfObj.c  nsfObjectData.c  nsfPointer.c  nsfProfile.c  nsfShadow.c  nsfStack.c  nsfStubInit.c  nsfStubLib.c  nsfTrace.c  (+33 more)
generic/asm/: README  asm.tcl  asmAssembleTemplate.c  asmExecuteTemplate.c  asmExecuteTemplateCallThreading.c  asmExecuteTemplateLabelThreading.c  genAssemble.tcl  nsfAsmAssemble.c  nsfAsmExecuteCallThreading.c  nsfAsmExecuteLabelThreading.c  nsfAssemble.c  threaded.c
generic/stubs8.5/: nsfDecls.h  nsfIntDecls.h  nsfStubInit.c
generic/stubs8.6/: nsfDecls.h  nsfIntDecls.h  nsfStubInit.c
generic/stubs8.7/: nsfDecls.h  nsfIntDecls.h  nsfStubInit.c
generic/stubs9.0/: nsfDecls.h  nsfIntDecls.h  nsfStubInit.c
generic/stubs9.1/: nsfDecls.h
m4/: tcl.m4
man/: man.macros  xotclsh.1  xowish.1
tclconfig/: mktar.sh
tests/: UNIVERSAL.test  accessor.test  actiweb.test  alias.test  aliastest.tcl  aliastest.xotcl  cget.test  class-method.test  cmdresolution.test  contains.test  coroutines.tcl  destroy.test  destroytest.tcl  destroytest.xotcl  disposition.test  doc.tcl  doc.test  doc.xotcl  double-alias.tcl  forward.test  forwardtest.tcl  forwardtest.xotcl  info-method.tcl  info-method.test  info-method.xotcl  info-variable.test  interceptor-slot.tcl  interceptor-slot.test  interceptor-slot.xotcl  interp.test  introspection.test  linearization.test  method-modifiers.tcl  method-modifiers.test  method-modifiers.xotcl  method-parameter.test  method-require.tcl  method-require.test  methods.test  mixinof.test  (+43 more)
unix/: pkgIndex.unix  pkgIndex.unix.in  tclAppInit.c  tkAppInit.c  xotcl.spec  xotcl.spec.in
win/: Makefile.vc  configs.vc  installWin.tcl  makefile.vc  nmakehlp.c  nsftest.tcl  pkg.vc  rules.vc  winMain.c
win/rc/: xotcl.rc
xotcl/: COMPILE  COMPILE.win  ChangeLog  Makefile  Makefile.in  README  configure  configure.in  speed-1.4.1.xls  tcl.m4  xotclConfig.sh  xotclConfig.sh.in
xotcl/config/: mktar.sh
xotcl/doc/: Announce-1.5.0  JufGdbmStorage-xotcl.html  MemStorage-xotcl.html  MultiStorage-xotcl.html  Script-xotcl.html  Serializer-xotcl.html  Storage-xotcl.html  index.html  (+24 more)
(+62 files in other folders)
